# informality

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: main.yaml
config/MX/download/: download.yaml  voronoi.yaml
config/MX/process/: homeplace_informality.yaml
config/download/: download.yaml
infrastructure/docker/: Dockerfile  environment.yml
src/: download_denue.py  download_enoe.py  download_inegi.py
src/MX/download_data/: download_aux.py  download_denue.py  download_enoe.py  make_voronoi.py  voronoi_aux.py
src/MX/informal_estimation/: create_map.py  eci_computation.py  informal_estimation.py
src/download_data/: __init__.py  download_aux.py  download_denue.py  download_enoe.py  download_inegi.py
src/download_data/MX/: download_aux.py  download_denue.py  download_inegi.py
src/informality_indices/: homeplace_informal_estimation.py  informality_aux.py
